# TDGA-AA

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile
workspace/: analyzer.py  change_B.sh  change_NpB.sh  change_mag.sh  change_temperature.sh  comic_dataset.py  fourscene_dataset.py  main.py  plot_change_temperature_comic.py  tdga_augment.py  tdga_augment_ind_train.py  tdga_augment_sga.py  train_cifar10.sh  train_cifar10_WRN28_10.sh  train_comic.sh  train_fourscene.sh  train_svhn.sh  transforms.py  transforms_range.py  transforms_range_prob.py  utils.py  warmup_scheduler.py
workspace/models/: PyramidNet.py  __init__.py  lstm_four_scene.py  shakedrop.py  wideresnet.py
workspace/tdga/: td_selection.py
