[tool.poetry]
name = "fastautoaugmentwithga"
version = "0.1.0"
description = ""
authors = ["terauchi <terauchi@ss.cs.osakafu-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
deap = "^1.3.1"
natsort = "^7.0.1"
opencv-python = "^4.2.0"
future = "0.17.1"
hyperopt = "0.1.2"
tb-nightly = "1.15.0a20190622"
fire = "^0.3.1"
sklearn = "^0.0"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
